Closed Bug 1748787 Opened 2 years ago Closed 2 years ago

YouTube has no audio anymore

Categories

(Core :: Audio/Video: Playback, defect)

Desktop
All
defect

Tracking

()

VERIFIED FIXED
97 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox95 --- unaffected
firefox96 --- unaffected
firefox97 --- verified

People

(Reporter: heftig, Assigned: padenot)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

YouTube videos play, but aren't audible.

Last good revision: 541bd0c03f16f0343f5ab9d96c15dbd7dc3d65e9
First bad revision: ebaadeccb1205fe89623e1f327c15bb62da6c52d
Pushlog: https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=541bd0c03f16f0343f5ab9d96c15dbd7dc3d65e9&tochange=ebaadeccb1205fe89623e1f327c15bb62da6c52d

Regressed by either bug 1630569 or bug 1748632.

I immediately found an issue with the patch in bug 1748632; the channels check in IsValidAudioFormat has been inverted:

 bool AudioStream::IsValidAudioFormat(Chunk* aChunk) {
   if (aChunk->Rate() != mAudioClock.GetInputRate()) {
     LOGW("mismatched sample %u, mInRate=%u", aChunk->Rate(),
          mAudioClock.GetInputRate());
     return false;
   }
 
-  if (aChunk->Channels() > 8) {
-    return false;
-  }
-
-  return true;
+  return aChunk->Channels() > 8;
 }
Has Regression Range: --- → yes
Has STR: --- → yes
Keywords: regression

Paul, your patch seems to cause the regression. Could you please look into this?

Flags: needinfo?(padenot)
Assignee: nobody → padenot
Flags: needinfo?(padenot)
Pushed by ctuns@mozilla.com:
https://hg.mozilla.org/mozilla-central/rev/7b247c3a9e97
WIP: Bug 1748787 - Invert a condition introduced in 1748632, causing no audio a=Aryx
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 97 Branch

Set release status flags based on info from the regressing bug 1748632

Flags: qe-verify+

I tried to reproduce the issue on older versions without any success. Can someone please confirm if the issue is fixed on the Latest Beta? Thank you.

I've also tried to reproduce on an affected build but could not reproduce thus I can't help verifying if this is fixed or not, Jan Alexander Steffens would you mind checking if this is fixed in the latest Beta build?
https://archive.mozilla.org/pub/firefox/candidates/97.0b8-candidates/build2/

Flags: needinfo?(jan.steffens)

I caught this one in a custom build (firefox-nightly for Arch Linux). Both the regression and the fix happened between Nightly 2022-01-05 and 2022-01-06 so this never hit nightly builds.

You should be able to reproduce with ebaadeccb1205fe89623e1f327c15bb62da6c52d.

Anyway, I can confirm 97.0b8 is unaffected.

Flags: needinfo?(jan.steffens)
Status: RESOLVED → VERIFIED
Flags: qe-verify+

I couldn't reproduce this bug with the specified build (ebaadeccb1205fe89623e1f327c15bb62da6c52d) on Win10, Ubuntu 18.04 and macOS Big Sur 11.6.2.
Thank you for confirmation.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: