WIP: Bug 1748787 - Invert a condition introduced in 1748632, causing no audio a=Aryx

Differential Revision: https://phabricator.services.mozilla.com/D135200